<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator v0.3</string>
    <string name="action_settings">Settings</string>
    <string name="bill">Enter Bill Amount</string>
    <string name="tipPerLabel">Tip Percentage</string>
    <string name="billAm">Bill Amount?</string>
    <string name="percent">%</string>
    <string name="shared">Divided between</string>
    <string name="calculate">Calculate!</string>
    <string name="totalPay">Total Bill</string>
    <string name="colour">Colour</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="percentHint">1-50</string>
    <string name="shouldTip">Should tip</string>
    <string name="share">Share Total</string>
    <string name="defaultTen">10.00</string>
    <string name="defaultOne">1</string>
    <string name="tipHint">1-20</string>
    <string name="poundDefault">0.00</string>

</resources>
